--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -47,4 +47,21 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>NOTIFICATION</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
