--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -42,12 +42,21 @@
     </dependencies>
 
     <build>
+        <finalName>NOTIFICATION</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
