Added configuration  onfig on github - using Fraud and Customer

--- a/spring-cloud-config/src/main/resources/application.yml
+++ b/spring-cloud-config/src/main/resources/application.yml
@@ -1,12 +1,16 @@
 server:
-  port: 9296
-
+  port: 8888
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
 spring:
-  application:
-    name: CONFIG-SERVER
   cloud:
     config:
       server:
         git:
-          uri: file:\\C:\Users\Zwidek\Desktop\Programowanie\Projekty IDE\microservice\application.yml
-          clone-on-start: true
+          uri: https://github.com/Zwidek/spring-cloud-config
